[package]
name = "tonlib-sys"
version = "2026.4.0"
edition = "2021"
description = "Rust bindings for tonlibjson library"
license = "MIT"
authors = ["STON.fi"]
repository = "https://github.com/ston-fi/tonlib-sys"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[features]
default = ["cmake"]
no_avx512 = []
shared-tonlib = []
with_debug_info = []

[dependencies]

[build-dependencies]
cmake = { version = "0.1", optional = true }
fs2 = "0.4"
dirs = "6.0"
anyhow = "1.0"
